Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-55165

getUserMedia on chromeMediaSource "screen" doesn't work on Mac OSX

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.9.1
    • 5.7.0
    • WebEngine
    • None
    • macOS
    • 99c1e5934fef1dfda6ecd682e48b97abb6823887

      As where as getUserMedia fine working with a chromeMediaSource = "screen" on windows platform, unfortunatly the request return an empty content on MacOSX plateform

      getUserMedia({
      audio: false,
      video: {
      mandatory:

      { chromeMediaSource: "screen", maxWidth: 1280, maxHeight: 720 }

      }
      });

        1. QTBUG-55165.zip
          5 kB
          vincent
        2. QTBUG-55165v2.zip
          2 kB
          Alexandru Croitor
        3. screenshot-1.png
          112 kB
          Eugene Pogrebnyak
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            alexandru.croitor Alexandru Croitor
            zucher vincent
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes